--- a/public/profile.html
+++ b/public/profile.html
@@ -58,9 +58,9 @@
                         document.getElementById('playerEmail').textContent = playerData.email;
                         document.getElementById('playerPoints').textContent = playerData.points;
                         document.getElementById('playerCredits').textContent = playerData.credits;
-                        // Handle empty level data
-                        const levelDisplay = playerData.level && playerData.level.name ? playerData.level.name : 
-                                           playerData.level && playerData.level.ordinal ? playerData.level.ordinal : '1';
+                        // Display level name or fallback
+                        const levelDisplay = playerData.level && playerData.level.name ? 
+                            playerData.level.name : 'No Current Team';
                         document.getElementById('playerLevel').textContent = levelDisplay;
                         if (playerData.imgUrl) {
                             document.getElementById('playerAvatar').src = playerData.imgUrl;
@@ -95,7 +95,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background: linear-gradient(135deg, var(--primary-color), var(--accent-color));
+            background: white;
             min-height: 100vh;
             padding: 2rem;
             display: flex;
@@ -106,12 +106,10 @@
         .profile-card {
             max-width: 800px;
             width: 100%;
-            background: var(--card-bg);
+            background: white;
             border-radius: var(--border-radius);
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
             padding: 2rem;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .profile-header {
@@ -152,15 +150,16 @@
 
         .stats-container {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 1.5rem;
-            margin: 2rem 0;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 2rem;
+            margin: 2rem auto;
             text-align: center;
+            max-width: 600px;
         }
 
         .stat-item {
-            padding: 1.5rem;
-            background: rgba(255, 255, 255, 0.9);
+            padding: 2rem;
+            background: var(--light-bg);
             border-radius: var(--border-radius);
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
             transition: var(--transition);
@@ -206,14 +205,14 @@
 
         .level-badge {
             display: inline-block;
-            background: var(--primary-color);
-            color: white;
-            padding: 0.5rem 1rem;
+            background: var(--light-bg);
+            color: var(--text-primary);
+            padding: 0.5rem 1.5rem;
             border-radius: 50px;
             font-size: 1.1rem;
             font-weight: 600;
             margin-top: 1rem;
-            box-shadow: 0 4px 12px rgba(99, 102, 241, 0.2);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
         }
 
         @media (max-width: 768px) {
@@ -235,7 +234,7 @@
             <h1 id="playerName" class="profile-name">Loading...</h1>
             <p id="playerEmail" class="profile-email">Loading...</p>
             <div class="level-badge">
-                Level <span id="playerLevel">1</span>
+                <span id="playerLevel">No Current Team</span>
             </div>
             
             <div class="stats-container">
