--- a/public/profile.html
+++ b/public/profile.html
@@ -95,7 +95,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background: white;
+            background: var(--light-bg);
             min-height: 100vh;
             padding: 2rem;
             display: flex;
@@ -138,7 +138,7 @@
             font-size: 2.5rem;
             font-weight: bold;
             margin-bottom: 0.5rem;
-            color: var(--text-primary);
+            color: var(--primary-color);
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
@@ -163,11 +163,12 @@
             border-radius: var(--border-radius);
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
             transition: var(--transition);
+            border: 2px solid var(--primary-color);
         }
 
         .stat-item:hover {
             transform: translateY(-5px);
-            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 6px 16px rgba(99, 102, 241, 0.2);
         }
 
         .stat-value {
@@ -205,14 +206,14 @@
 
         .level-badge {
             display: inline-block;
-            background: var(--light-bg);
-            color: var(--text-primary);
+            background: var(--primary-color);
+            color: white;
             padding: 0.5rem 1.5rem;
             border-radius: 50px;
             font-size: 1.1rem;
             font-weight: 600;
             margin-top: 1rem;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 4px 12px rgba(99, 102, 241, 0.2);
         }
 
         @media (max-width: 768px) {
