--- a/public/profile.html
+++ b/public/profile.html
@@ -58,14 +58,32 @@
                         document.getElementById('playerEmail').textContent = playerData.email;
                         document.getElementById('playerPoints').textContent = playerData.points;
                         document.getElementById('playerCredits').textContent = playerData.credits;
+                        
                         // Display level name or fallback
                         const levelDisplay = playerData.level && playerData.level.name ? 
                             playerData.level.name : 'No Level';
                         document.getElementById('playerLevel').textContent = levelDisplay;
-                        // Display team name or fallback
-                        const teamDisplay = playerData.team && playerData.team.name ? 
-                            playerData.team.name : 'No Team';
-                        document.getElementById('playerTeam').textContent = teamDisplay;
+
+                        // Fetch team details if team ID exists
+                        if (playerData.team) {
+                            try {
+                                const teamResponse = await fetch(`/api/teams/${playerData.team}`);
+                                const teamData = await teamResponse.json();
+                                console.log('Team data:', teamData);
+                                
+                                if (teamResponse.ok && teamData) {
+                                    document.getElementById('playerTeam').textContent = teamData.name;
+                                } else {
+                                    document.getElementById('playerTeam').textContent = 'No Team';
+                                }
+                            } catch (error) {
+                                console.error('Error fetching team data:', error);
+                                document.getElementById('playerTeam').textContent = 'No Team';
+                            }
+                        } else {
+                            document.getElementById('playerTeam').textContent = 'No Team';
+                        }
+
                         if (playerData.imgUrl) {
                             document.getElementById('playerAvatar').src = playerData.imgUrl;
                         }
