Change 'Create Player' button to 'Back' on Returning Player page

--- a/public/index.html
+++ b/public/index.html
@@ -440,6 +440,15 @@
                 </div>
             </div>
         </div>
+        <div class="card" id="returningPlayerCard" style="display: none;">
+            <div class="card-body text-center">
+                <h2 class="card-title">Welcome Back!</h2>
+                <p class="card-text">Sign in to continue your journey.</p>
+                <button onclick="showCreatePlayerCard()" class="btn btn-primary">
+                    <i class="bi bi-arrow-left"></i> Back
+                </button>
+            </div>
+        </div>
     </div>
 
     <script>
