--- a/public/profile.html
+++ b/public/profile.html
@@ -267,6 +267,7 @@
             display: flex;
             flex-direction: column;
             gap: 2rem;
+            margin-top: 1rem;
         }
 
         .mission-card {
