--- a/public/profile.html
+++ b/public/profile.html
@@ -392,6 +392,8 @@
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
             padding: 2rem;
             width: 100%;
+            position: relative;
+            overflow: visible;
         }
 
         @media (max-width: 768px) {
@@ -405,12 +407,14 @@
         }
 
         .mission-card.priority-1 {
-            width: 100%;
+            width: 110%;
             margin-bottom: 2rem;
+            margin-left: -5%;
             background: linear-gradient(135deg, #6366F1 0%, #4F46E5 100%);
             color: white;
             padding: 0;
             overflow: hidden;
+            position: relative;
         }
         
         .mission-card.priority-1 .mission-name,
