--- a/public/profile.html
+++ b/public/profile.html
@@ -145,6 +145,17 @@
             margin-bottom: 2rem;
         }
 
+        .profile-card {
+            background: linear-gradient(135deg, #007AFF 0%, #0055CC 100%);
+            color: white;
+            border-radius: 16px;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            box-shadow: 0 10px 20px rgba(0, 122, 255, 0.2);
+            padding: 2rem;
+            margin-bottom: 2rem;
+        }
+
         .profile-header {
             text-align: center;
             margin-bottom: 2rem;
@@ -157,26 +168,26 @@
             border-radius: 50%;
             object-fit: cover;
             margin-bottom: 1.5rem;
-            border: 4px solid var(--primary-color);
-            box-shadow: 0 4px 12px rgba(0, 122, 255, 0.2);
+            border: 4px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             transition: var(--transition);
         }
 
         .profile-avatar:hover {
             transform: scale(1.05);
-            box-shadow: 0 6px 16px rgba(0, 122, 255, 0.3);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
         }
 
         .profile-name {
             font-size: 2.5rem;
             font-weight: bold;
             margin-bottom: 0.5rem;
-            color: var(--primary-color);
+            color: white;
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .profile-email {
-            color: var(--text-secondary);
+            color: rgba(255, 255, 255, 0.9);
             font-size: 1.1rem;
             margin-bottom: 2rem;
         }
@@ -192,54 +203,45 @@
         .badge {
             display: inline-flex;
             align-items: center;
-            padding: 0.5rem 1.5rem;
-            border-radius: 50px;
+            padding: 0.75rem 1.5rem;
+            border-radius: 12px;
             font-size: 1.1rem;
             font-weight: 600;
-            box-shadow: 0 4px 12px rgba(0, 122, 255, 0.2);
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
             transition: var(--transition);
         }
 
         .badge:hover {
             transform: translateY(-2px);
-            box-shadow: 0 6px 16px rgba(0, 122, 255, 0.3);
+            background: rgba(255, 255, 255, 0.3);
         }
 
-        .level-badge {
-            background: var(--primary-color);
-            color: white;
-        }
-
-        .team-badge {
-            background: var(--accent-color);
-            color: white;
-        }
-
-        .points-badge, .credits-badge {
-            background: var(--light-bg);
-            color: var(--primary-color);
-            border: 2px solid var(--primary-color);
-            flex-direction: column;
-            padding: 0.75rem 1.5rem;
+        .badge i {
+            margin-right: 0.5rem;
+            font-size: 1.2rem;
         }
 
         .btn-signout {
-            background-color: var(--accent-color);
+            background: rgba(255, 255, 255, 0.2);
             color: white;
             border: none;
             padding: 0.75rem 2rem;
-            border-radius: 50px;
+            border-radius: 12px;
             font-size: 1.1rem;
             font-weight: 600;
             cursor: pointer;
             transition: var(--transition);
-            box-shadow: 0 4px 12px rgba(255, 45, 85, 0.2);
+            margin-top: 1rem;
         }
 
         .btn-signout:hover {
-            background-color: #e11d48;
+            background: rgba(255, 255, 255, 0.3);
             transform: translateY(-2px);
-            box-shadow: 0 6px 16px rgba(255, 45, 85, 0.3);
+        }
+
+        .btn-signout i {
+            margin-right: 0.5rem;
         }
 
         .section-title {
@@ -431,17 +433,21 @@
                 <h1 id="playerName" class="profile-name">Loading...</h1>
                 <p id="playerEmail" class="profile-email">Loading...</p>
                 <div class="badges-container">
-                    <div class="badge level-badge">
+                    <div class="badge">
+                        <i class="bi bi-trophy"></i>
                         <span id="playerLevel">No Level</span>
                     </div>
-                    <div class="badge team-badge">
+                    <div class="badge">
+                        <i class="bi bi-people"></i>
                         <span id="playerTeam">No Team</span>
                     </div>
-                    <div class="badge points-badge">
+                    <div class="badge">
+                        <i class="bi bi-star-fill"></i>
                         <span id="playerPoints">0</span>
                         <span class="badge-label">Points</span>
                     </div>
-                    <div class="badge credits-badge">
+                    <div class="badge">
+                        <i class="bi bi-coin"></i>
                         <span id="playerCredits">0</span>
                         <span class="badge-label">Credits</span>
                     </div>
